--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -1,3 +1,32 @@
 ---
 
 # tasks file for osp.servers
+- name: Create instance
+  os_server:
+    cloud: openstack
+    name: "{{ vm['name'] | default(omit) }}"
+    image: "{{ vm['image'] | default('rhel-guest') }}"
+    key_name: "{{ vm['key_name']| default('ansible_ssh') }}"
+    flavor: "{{ vm['flavor']| default('m2.small') }}"
+    security_groups: "{{ vm['security_groups']| default(omit) }}"
+    delete_fip: yes
+    wait: no
+    nics:
+      - net-name: "{{ vm['net-name']| default('int_network') }}"
+    meta: "{{ vm['meta']| default('group=testservers,deployment_name=Dev') }}"
+    userdata: |
+      #!/bin/bash
+      curl -o /tmp/openstack.pub http://www.opentlc.com/download/ansible_bootcamp/openstack_keys/openstack.pub
+      cat /tmp/openstack.pub >> ~/.ssh/authorized_keys
+
+- name: Add floating IP to instance
+  os_floating_ip:
+    cloud: openstack
+    state: present
+    reuse: yes
+    server: "{{ vm['name'] }}"
+    network: "{{ vm['ext_net-name']| default('ext_network') }}"
+    wait: true
+    timeout: 200
+  retries: 3
+  delay: 10
