3 tier app update

--- a/roles/lb-tier/handlers/main.yml
+++ b/roles/lb-tier/handlers/main.yml
@@ -1,7 +1,6 @@
 ---
-
-- name: start {{ payload }}
+# handlers file for haproxy
+- name: restart_haproxy
   service:
-    name: tomcat
-    state: started
-
+    name: haproxy
+    state: restarted
