3 tier app update

--- a/roles/app-tier/handlers/main.yml
+++ b/roles/app-tier/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: start {{ payload }}
+- name: restart "{{ app_server_service }}"
   service:
-    name: tomcat
-    state: started
+    name: "{{ app_server_service }}"
+    state: restarted
 
