--- a/roles/app-tier/tasks/main.yml
+++ b/roles/app-tier/tasks/main.yml
@@ -1,25 +1,25 @@
 ---
 
 # tasks file for tomcat
-- name: Install Tomcat package(s)
+- name: Install "{{ app_server_service }}" package(s)
   package:
     name: "{{ app_server_packages }}"
     state: present
 
-- name: Enable Tomcat at boot
+- name: Enable "{{ app_server_service }}" at boot
   service:
-    name: tomcat
+    name: "{{ app_server_service }}"
     enabled: yes
 
-- name: Create Tomcat content directory
+- name: Create "{{ app_server_service }}" content directory
   file:
-    path: /usr/share/tomcat/webapps/ROOT
+    path: "{{ tomcat_web_root }}"
     state: directory
 
-- name: Copy static index.html to tomcat webapps/ansible/index.html
+- name: Copy static index.html to "{{ tomcat_web_root }}"
   template:
     src: index.html.j2
-    dest: /usr/share/tomcat/webapps/ROOT/index.html
+    dest: "{{ tomcat_web_root }}/index.html"
     mode: 0644
 
 - name: Create symlink to resolve tomcat java issue
@@ -27,8 +27,4 @@
     src: /usr/share/java/tomcat/extras/tomcat-juli.jar
     dest: /usr/share/tomcat/bin/tomcat-juli.jar
     state: link
-
-- name: Start Tomcat
-  service:
-    name: "{{ app_server_service }}"
-    state: started
+  notify: restart "{{ app_server_service }}"
