--- a/roles/lb-tier/handlers/main.yml
+++ b/roles/lb-tier/handlers/main.yml
@@ -2,5 +2,5 @@
 # handlers file for haproxy
 - name: restart_haproxy
   service:
-    name: haproxy
+    name: "{{ payload }}"
     state: restarted
