base config update

--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -9,6 +9,13 @@
     backup: yes
 
 - name: enable repos
- 
-- name: install base tools and packages
+  template:
+    dest: /etc/yum.repos.d/internal_three-tier-app.repo
+    src: repos_template.j2
+    mode: 0644
 
+- name: install base tools and packages
+  yum:
+    name:
+      - python-pip
+    state: latest
