troubleshooting post config

--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -1,4 +1,12 @@
 - name: Create Homework Assignment project
+  tower_project:
+    name: "{{ proj_name }}"
+    description: "HW assignment project"
+    organization: "{{ org_name }}"
+    scm_url: "{{ scm_url }}"
+    scm_branch: "{{ scm_branch }}"
+    scm_type: git
+    state: present
 
 
 - name: Machine Credentail to connect to workstation using openstack.pub
