changing server metadata, assuming this install they keys.

--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -17,7 +17,7 @@
     userdata: |
       #!/bin/bash
       curl -o /tmp/openstack.pub http://www.opentlc.com/download/ansible_bootcamp/openstack_keys/openstack.pub
-      cat /tmp/openstack.pub >> ~/.ssh/authorized_keys
+      cat /tmp/openstack.pub >> /home/cloud-user/.ssh/authorized_keys
 
 - name: Add floating IP to instance
   os_floating_ip:
