add mode to template file

--- a/roles/lb-tier/tasks/main.yml
+++ b/roles/lb-tier/tasks/main.yml
@@ -9,6 +9,7 @@
   template:
     src: haproxy.cfg.j2
     dest: /etc/haproxy/haproxy.cfg
+    mode: '0644'
   notify: restart_haproxy
 
 - name: Enable Haproxy
