--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -6,6 +6,9 @@
     scm_url: "{{ scm_url }}"
     scm_branch: "{{ scm_branch }}"
     scm_type: git
+    scm_update_on_launch: True
+    scm_update_cache_timeout: 60
+    tower_host: tower1.{{tower_GUID}}.example.opentlc.com
     state: present
 
 
