--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -1,32 +1,39 @@
 ---
 
 # tasks file for osp.servers
-- name: Create instance
+
+- name: Create Servers
   os_server:
     cloud: openstack
-    name: "{{ vm['name'] | default(omit) }}"
-    image: "{{ vm['image'] | default('rhel-guest') }}"
-    key_name: "{{ vm['key_name']| default('ansible_ssh') }}"
-    flavor: "{{ vm['flavor']| default('m1.medium') }}"
-    security_groups: "{{ vm['security_groups']| default(omit) }}"
+    name: "{{ _server.value.name }}"
+    image: "{{ _server.value.image }}"
+    key_name: "{{ _server.value.key_name }}"
+    flavor: "{{ _server.value.flavor }}"
+    security_groups: "{{ _server.value.security_group }}"
     delete_fip: yes
     wait: no
-    nics:
-      - net-name: "{{ vm['net-name']| default('int_network') }}"
-    meta: "{{ vm['meta']| default('group=testservers,deployment_name=Dev') }}"
+    meta: "{{ _server.value.meta[0] }}"
     userdata: |
       #!/bin/bash
       curl -o /tmp/openstack.pub http://www.opentlc.com/download/ansible_bootcamp/openstack_keys/openstack.pub
       cat /tmp/openstack.pub >> /home/cloud-user/.ssh/authorized_keys
+    nics:
+      - net-name: int_network
+  with_dict: "{{ osp_servers }}"
+  loop_control:
+    loop_var: _server
 
-- name: Add floating IP to instance
+- name: Add floating IP
   os_floating_ip:
     cloud: openstack
-    state: present
+    state: "{{ _server.value.state }}"
     reuse: yes
-    server: "{{ vm['name'] }}"
-    network: "{{ vm['ext_net-name']| default('ext_network') }}"
+    server: "{{ _server.value.name }}"
+    network: ext_network
     wait: true
     timeout: 200
+  with_dict: "{{ osp_servers }}"
+  loop_control:
+    loop_var: _server
   retries: 5
   delay: 10
