--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -1,11 +1,26 @@
+---
 - hosts: workstation
   gather_facts: false
   tasks:
-  - name: OpenStack servers
+  - name: OpenStack servers facts
+    import_role: osp-facts
+
+- hosts: frontends
+  gather_facts: true
+  tasks:
   - name: Curl website
+    uri:
+      url: "http://{{ansible_default_ipv4.address}}"
+      return_content: yes
+      status_code: 200
+    register: response
+    delegate_to: localhost
+
+  - debug:
+      msg: "Web Server Response: {{ response }}"
 
   - name: Fail if 'Ansible has done its job' is not in the page content
     fail:
-    when: "'Ansible has done its job' not in webpage.results[0].content"
+    when: "'Ansible has done its job' not in webpage.results[0].cdeontent"
     tags:
       - osp.smoke
