--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -3,7 +3,8 @@
   gather_facts: false
   tasks:
   - name: OpenStack servers facts
-    import_role: osp-facts
+    import_role:
+      name: osp-facts
 
 - hosts: frontends
   gather_facts: true
