--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -9,6 +9,11 @@
 - hosts: frontends
   gather_facts: true
   tasks:
+  - name: Register IP
+    set_fact:
+      - frontend_ip: "{{ ansible_default_ipv4.address }}"
+  - debug:
+      var: frontend_ip
   - name: Curl website
     uri:
       url: "http://{{ansible_default_ipv4.address}}"
