--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -11,12 +11,12 @@
   tasks:
   - name: Register IP
     set_fact:
-      frontend_ip: "{{ ansible_default_ipv4.address }}"
+      frontend_ip: "{{ inventory_hostname }}"
   - debug:
       var: frontend_ip
   - name: Curl website
     uri:
-      url: "http://{{ansible_default_ipv4.address}}"
+      url: "http://{{inventory_hostname}}"
       return_content: yes
       status_code: 200
     register: response
