adding quotes, just in case

--- a/aws_provision.yml
+++ b/aws_provision.yml
@@ -26,9 +26,9 @@
     - name: create credentials
       copy:
         content: |
-          export username={{ param_user }}
-          export password={{ param_password }}
-          export uri=https://labs.opentlc.com
+          export username='{{ param_user }}'
+          export password='{{ param_password }}'
+          export uri='https://labs.opentlc.com'
         dest: /root/credential.rc
         mode: 0755
 
