make sure python is in path as the script doesn't use the absolute path for python.

--- a/aws_provision.yml
+++ b/aws_provision.yml
@@ -3,6 +3,11 @@
   become: true
   gather_facts: false
   tasks:
+    - name: Make sure python is in path in the workstation machine
+      file:
+        path: /usr/bin/python2.7
+        dest: /usr/bin/python
+        state: link
     - name: create bin directory
       file:
         path: /root/bin
